// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildInfraSpecifications snapshot test able to select a connector 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tabHeading"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </div>
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    pipelineSteps.build.infraSpecifications.newConfigurationConnectorLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                      data-testid="cr-field-connectorRef"
                      style="width: 300px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <p
                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                tabindex="0"
                              >
                                tesa 1
                              </p>
                            </span>
                          </span>
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps--main"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  pipelineSteps.build.infraSpecifications.namespace
                </p>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    style="width: 300px;"
                  >
                    
                    <div
                      style="display: flex; align-items: center;"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="namespace-1"
                        style="margin-bottom: 0px; flex-grow: 1;"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="namespace"
                                type="text"
                                value=""
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="false"
                  data-testid="advanced-panel"
                  id="advanced-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="advanced-summary"
                  >
                    <div
                      class="Accordion--chevron"
                    />
                    <div
                      class="Accordion--label"
                    >
                      advancedTitle
                    </div>
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(-undefinedpx);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="navigationButtons"
      />
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot test can add new label 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tabHeading"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </div>
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    pipelineSteps.build.infraSpecifications.newConfigurationConnectorLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                      data-testid="cr-field-connectorRef"
                      style="width: 300px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <p
                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                tabindex="0"
                              >
                                tesa 1
                              </p>
                            </span>
                          </span>
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  org
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps--main"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  pipelineSteps.build.infraSpecifications.namespace
                </p>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    style="width: 300px;"
                  >
                    
                    <div
                      style="display: flex; align-items: center;"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="namespace-1"
                        style="margin-bottom: 0px; flex-grow: 1;"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="namespace"
                                type="text"
                                value=""
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="true"
                  data-testid="advanced-panel"
                  id="advanced-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="advanced-summary"
                  >
                    <div
                      class="Accordion--chevron"
                    />
                    <div
                      class="Accordion--label"
                    >
                      advancedTitle
                    </div>
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                    style="height: auto; overflow-y: visible; transition: none;"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(0); transition: none;"
                    >
                      <div
                        class="Accordion--details"
                        data-testid="advanced-details"
                      >
                        <div
                          class="bp3-card bp3-elevation-0 Card--card sectionCard"
                        >
                          <div
                            class="group withoutSpacing minimalCard"
                          >
                            <div
                              class="bp3-form-group"
                              style="flex-grow: 1; margin-bottom: 0px;"
                            >
                              <label
                                class="bp3-label"
                                for="annotations"
                              >
                                <div
                                  class="formLabel"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main"
                                  >
                                    ci.annotations
                                  </p>
                                </div>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="bp3-card bp3-elevation-0 Card--card"
                                  style="width: 50%;"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                                    data-testid="add-annotations"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-button-text"
                                    >
                                      plusAdd
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="group withoutSpacing minimalCard"
                          >
                            <div
                              class="bp3-form-group"
                              style="flex-grow: 1; margin-bottom: 0px;"
                            >
                              <label
                                class="bp3-label"
                                for="labels"
                              >
                                <div
                                  class="formLabel"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main"
                                  >
                                    ci.labels
                                  </p>
                                </div>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="bp3-card bp3-elevation-0 Card--card"
                                  style="width: 50%;"
                                >
                                  <div
                                    class="group withoutAligning"
                                  >
                                    <div
                                      style="flex-grow: 1;"
                                    >
                                      <p
                                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall StyledProps--font-size-small"
                                      >
                                        keyLabel
                                      </p>
                                      <div
                                        class="bp3-form-group"
                                        style="margin: 0px;"
                                      >
                                        <div
                                          class="bp3-form-content"
                                        >
                                          <div
                                            class="bp3-input-group"
                                          >
                                            <input
                                              autocomplete="off"
                                              class="bp3-input"
                                              name="labels[0].key"
                                              type="text"
                                              value="lab1"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      style="flex-grow: 1;"
                                    >
                                      <p
                                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--margin-bottom-xsmall"
                                      >
                                        valueLabel
                                      </p>
                                      <div
                                        class="group withoutAligning withoutSpacing"
                                      >
                                        <div
                                          class="bp3-form-group"
                                          style="flex-grow: 1;"
                                        >
                                          
                                          <div
                                            class="bp3-form-content"
                                          >
                                            <div
                                              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                            >
                                              <div
                                                class="bp3-input-group MultiTypeInput--input"
                                              >
                                                <input
                                                  autocomplete="off"
                                                  class="bp3-input"
                                                  name="labels[0].value"
                                                  type="text"
                                                  value="test"
                                                />
                                              </div>
                                              <span
                                                class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                              >
                                                <span
                                                  class="bp3-popover-target"
                                                >
                                                  <button
                                                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                                  >
                                                    <span
                                                      class="bp3-icon StyledProps--main"
                                                      data-icon="fixed-input"
                                                    >
                                                      <svg
                                                        height="12"
                                                        viewBox="0 0 9 9"
                                                        width="12"
                                                      >
                                                        <path
                                                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                          fill="currentColor"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </button>
                                                </span>
                                              </span>
                                            </div>
                                          </div>
                                        </div>
                                        <button
                                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                                          data-testid="remove-labels-[0]"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-icon StyledProps--main"
                                            data-icon="main-trash"
                                          >
                                            <svg
                                              height="20"
                                              viewBox="0 0 11 14"
                                              width="20"
                                            >
                                              <path
                                                d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                                                fill="#4d5969"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="group withoutAligning"
                                  >
                                    <div
                                      style="flex-grow: 1;"
                                    >
                                      <div
                                        class="bp3-form-group"
                                        style="margin: 0px;"
                                      >
                                        <div
                                          class="bp3-form-content"
                                        >
                                          <div
                                            class="bp3-input-group"
                                          >
                                            <input
                                              autocomplete="off"
                                              class="bp3-input"
                                              name="labels[1].key"
                                              type="text"
                                              value="projectid"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      style="flex-grow: 1;"
                                    >
                                      <div
                                        class="group withoutAligning withoutSpacing"
                                      >
                                        <div
                                          class="bp3-form-group"
                                          style="flex-grow: 1;"
                                        >
                                          
                                          <div
                                            class="bp3-form-content"
                                          >
                                            <div
                                              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                            >
                                              <div
                                                class="bp3-input-group MultiTypeInput--input"
                                              >
                                                <input
                                                  autocomplete="off"
                                                  class="bp3-input"
                                                  name="labels[1].value"
                                                  type="text"
                                                  value="invalidKey"
                                                />
                                              </div>
                                              <span
                                                class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                              >
                                                <span
                                                  class="bp3-popover-target"
                                                >
                                                  <button
                                                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                                  >
                                                    <span
                                                      class="bp3-icon StyledProps--main"
                                                      data-icon="fixed-input"
                                                    >
                                                      <svg
                                                        height="12"
                                                        viewBox="0 0 9 9"
                                                        width="12"
                                                      >
                                                        <path
                                                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                          fill="currentColor"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </button>
                                                </span>
                                              </span>
                                            </div>
                                          </div>
                                        </div>
                                        <button
                                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                                          data-testid="remove-labels-[1]"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-icon StyledProps--main"
                                            data-icon="main-trash"
                                          >
                                            <svg
                                              height="20"
                                              viewBox="0 0 11 14"
                                              width="20"
                                            >
                                              <path
                                                d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                                                fill="#4d5969"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="group withoutAligning"
                                  >
                                    <div
                                      style="flex-grow: 1;"
                                    >
                                      <div
                                        class="bp3-form-group"
                                        style="margin: 0px;"
                                      >
                                        <div
                                          class="bp3-form-content"
                                        >
                                          <div
                                            class="bp3-input-group"
                                          >
                                            <input
                                              autocomplete="off"
                                              class="bp3-input"
                                              name="labels[2].key"
                                              type="text"
                                              value="projectid"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      style="flex-grow: 1;"
                                    >
                                      <div
                                        class="group withoutAligning withoutSpacing"
                                      >
                                        <div
                                          class="bp3-form-group"
                                          style="flex-grow: 1;"
                                        >
                                          
                                          <div
                                            class="bp3-form-content"
                                          >
                                            <div
                                              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                            >
                                              <div
                                                class="bp3-input-group MultiTypeInput--input"
                                              >
                                                <input
                                                  autocomplete="off"
                                                  class="bp3-input"
                                                  name="labels[2].value"
                                                  type="text"
                                                  value="testVal"
                                                />
                                              </div>
                                              <span
                                                class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                              >
                                                <span
                                                  class="bp3-popover-target"
                                                >
                                                  <button
                                                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                                  >
                                                    <span
                                                      class="bp3-icon StyledProps--main"
                                                      data-icon="fixed-input"
                                                    >
                                                      <svg
                                                        height="12"
                                                        viewBox="0 0 9 9"
                                                        width="12"
                                                      >
                                                        <path
                                                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                          fill="currentColor"
                                                        />
                                                      </svg>
                                                    </span>
                                                  </button>
                                                </span>
                                              </span>
                                            </div>
                                          </div>
                                        </div>
                                        <button
                                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                                          data-testid="remove-labels-[2]"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-icon StyledProps--main"
                                            data-icon="main-trash"
                                          >
                                            <svg
                                              height="20"
                                              viewBox="0 0 11 14"
                                              width="20"
                                            >
                                              <path
                                                d="M10.3.7H6.9c0-.4-.3-.7-.7-.7H4.8c-.4 0-.7.3-.7.7H.7C.3.7 0 1 0 1.4v.7h11v-.7c0-.4-.3-.7-.7-.7zm.4 2.1H.3c-.1 0-.3.2-.3.4s.2.3.3.3h.3v9.8c.1.4.4.7.8.7h8.2c.4 0 .7-.3.7-.7V3.5h.3c.2 0 .3-.2.3-.3.1-.2-.1-.4-.2-.4zm-7.3 8.4c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.8 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7zm2.7 0c0 .4-.3.7-.7.7s-.7-.3-.7-.7V5.6c0-.4.3-.7.7-.7s.7.3.7.7z"
                                                fill="#4d5969"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                                    data-testid="add-labels"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-button-text"
                                    >
                                      plusAdd
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="navigationButtons"
      />
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot test initializes ok 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <div
            class="tabHeading"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </div>
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-card bp3-elevation-0 Card--card sectionCard"
              >
                <div
                  class="bp3-form-group"
                  data-id="null-0"
                >
                  <label
                    class="bp3-label"
                  >
                    pipelineSteps.build.infraSpecifications.newConfigurationConnectorLabel
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                      data-testid="cr-field-connectorRef"
                      style="width: 300px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <p
                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                tabindex="0"
                              >
                                tesa 1
                              </p>
                            </span>
                          </span>
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps--main"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  pipelineSteps.build.infraSpecifications.namespace
                </p>
                <div
                  class="fieldsGroup withoutSpacing"
                >
                  <div
                    style="width: 300px;"
                  >
                    
                    <div
                      style="display: flex; align-items: center;"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="namespace-1"
                        style="margin-bottom: 0px; flex-grow: 1;"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="namespace"
                                type="text"
                                value=""
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Accordion--accordion"
              >
                <div
                  class="Accordion--panel"
                  data-open="false"
                  data-testid="advanced-panel"
                  id="advanced-panel"
                >
                  <div
                    class="Accordion--summary"
                    data-testid="advanced-summary"
                  >
                    <div
                      class="Accordion--chevron"
                    />
                    <div
                      class="Accordion--label"
                    >
                      advancedTitle
                    </div>
                  </div>
                  <div
                    class="bp3-collapse Accordion--collapse"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(-undefinedpx);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="navigationButtons"
      />
    </div>
  </div>
</div>
`;
